[workspace]
resolver = "2"

members = [
    "contracts/solution"
]

[workspace.dependencies.soroban-sdk]
git = "https://github.com/stellar/rs-soroban-sdk"
version = "0.8.0"
rev = "090f5c8"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true