[workspace]
resolver = "2"

members = [
    "contracts/game_engine",
    "contracts/solution"
]

[workspace.dependencies]
soroban-sdk = "20.5.0"
rand = { version = "0.8.5", features = ["small_rng"], default-features = false }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
